--- a/src/Components/Character.css
+++ b/src/Components/Character.css
@@ -1,15 +1,15 @@
 .characters {
-    display: flex;
-    padding: 0 10%;
-    gap: 5%;
+    display: grid;
+    padding: 0 7%;
+    gap: 4%;
+    grid-template-columns: 1fr 1fr;
 }
 .card {
     display: flex;
     align-items: center;
-    width: 50%;
     background: grey;
     border-radius: 8px;
-    height: 230px;
+    height: 250px;
     background-color:#495057;
 }
 
@@ -60,8 +60,39 @@
     font-size: clamp(14px,0.89vw,17px)
 }
 
-@media(max-width:1220px){
+.filter {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+}
+.filter input{
+    border-radius: 8px;
+    height: 40px;
+    border-color: transparent;
+    width: 25%;
+    outline: none;
+    caret-color: #495057;
+    padding-left: 15px;
+    font-size: 15px;
+}
+.filter input::placeholder {
+    font-size: 16px;
+    color: #495057;
+}
+@media(max-width:1250px){
     .card {
-        width: 100%;
+        width:80%
+    }
+    .characters {
+        grid-template-columns: 1fr;
+        place-items: center;
+    }
+}
+@media(max-width:768px){
+    .card {
+        width:100%
+    }
+    .filter input{
+        width: 50%;
     }
 }
