--- a/src/Components/Character.css
+++ b/src/Components/Character.css
@@ -1,16 +1,20 @@
+:root {
+    --text-color: #f5f5f5;
+}
+
 .characters {
     display: grid;
     padding: 0 7%;
-    gap: 4%;
+    gap: 1% 4%;
     grid-template-columns: 1fr 1fr;
 }
+
 .card {
     display: flex;
     align-items: center;
-    background: grey;
     border-radius: 8px;
     height: 250px;
-    background-color:#495057;
+    background-color: #3b3d43;
 }
 
 .card .image {
@@ -18,46 +22,54 @@
     border-radius: 8px 0 0 8px;
     height: 100%;
 }
+
 .card .details {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 15px;
 }
+
 .card .details .status {
     display: flex;
     align-items: center;
     gap: 8px;
     margin-bottom: 10px;
 }
+
 .card .details .status span {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background: green;
 }
+
 .card .details .status p {
-    font-size: clamp(14px,0.89vw,17px);
+    font-size: clamp(14px, 0.89vw, 17px);
     font-weight: 500;
-    color: #fff;
+    color: var(--text-color);
 }
+
 .card .details .location {
     margin-bottom: 10px;
 }
+
 .card .details h2 {
-    color: #fff;
+    color: var(--text-color);
     font-weight: 700;
-    font-size: clamp(18px,1.46vw,28px);
+    font-size: clamp(18px, 1.46vw, 28px);
 }
+
 .card .details p {
     color: gray;
     margin-bottom: 0;
     font-size: 15px;
     font-weight: 600;
 }
+
 .card .details span {
-    color: #fff;
-    font-size: clamp(14px,0.89vw,17px)
+    color: var(--text-color);
+    font-size: clamp(14px, 0.89vw, 17px)
 }
 
 .filter {
@@ -65,7 +77,8 @@
     justify-content: center;
     margin: 40px 0;
 }
-.filter input{
+
+.filter input {
     border-radius: 8px;
     height: 40px;
     border-color: transparent;
@@ -75,24 +88,29 @@
     padding-left: 15px;
     font-size: 15px;
 }
+
 .filter input::placeholder {
     font-size: 16px;
     color: #495057;
 }
-@media(max-width:1250px){
+
+@media(max-width:1250px) {
     .card {
-        width:80%
+        width: 80%
     }
+
     .characters {
         grid-template-columns: 1fr;
         place-items: center;
     }
 }
-@media(max-width:768px){
+
+@media(max-width:768px) {
     .card {
-        width:100%
+        width: 100%
     }
-    .filter input{
+
+    .filter input {
         width: 50%;
     }
 }
